<resources>
    <string name="app_name">Fabulus Trade</string>
    <string name="on_boarding_button_text_title">Продолжить</string>
    <string name="traders_title_menu_title">Трейдеры</string>
    <string name="my_profile_title">Моя страница</string>
    <string name="invite_a_friend_menu_title">Пригласить друга</string>
    <string name="about_service_menu_title">О компании</string>
    <string name="faq_menu_title">Вопросы и ответы</string>
    <string name="settings_menu_title">Настройки</string>
    <string name="exit_menu_title">Выход</string>
    <string name="enter_with_google_button_title">Войти с Google</string>
    <string name="enter_with_facebook_button_title">Войти с Facebook</string>
    <string name="entrance_text_view_3_title">Нет учетной записи?</string>
    <string name="default_notification_channel_id" translatable="false">fabulus_trade_channel</string>
    <string name="comment_on">Комментировать</string>
    <string name="my_deals">Мои сделки</string>
    <string name="create">Созать</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="community">Сообщество</string>
    <string name="observation">Наблюдение</string>
    <string name="added_to_observation">Добавлен в лист наблюдения</string>
    <string name="removed_from_observation">Удалён из листа наблюдения</string>
    <string name="e_mail_quastion">E-mail для связи</string>
    <string name="question_success">Ваш вопрос отправлен в службу поддержки, ответ будет отправлен на указанный Вами e-mail</string>
    <string name="question_too_long">Вопрос слишком длинный</string>
    <string name="question_too_short">Вы забыли написать вопрос</string>
    <string name="change_ava_title">Сменить аватар</string>
    <string name="delete_ava_title">Удалить аватар</string>
    <string name="jan_profit">Янв</string>
    <string name="feb_profit">Фев</string>
    <string name="mar_profit">Мар</string>
    <string name="apr_profit">Апр</string>
    <string name="may_profit">Май</string>
    <string name="jun_profit">Июн</string>
    <string name="jul_profit">Июл</string>
    <string name="aug_profit">Авг</string>
    <string name="sep_profit">Сен</string>
    <string name="oct_profit">Окт</string>
    <string name="nov_profit">Ноя</string>
    <string name="dec_profit">Дек</string>
    <string name="trader_reg_view1_title">Заполнить профиль</string>
    <string name="trader_reg_1_text1">Ваши  персональные данные будут обработаны с целью создания профиля трейдера в соответствии с нормативно- правовыми требованиями.</string>
    <string name="trader_reg_1_text2">Хранение данных будет осуществляться с соблюдением правил конфиденциальности.</string>
    <string name="continue_btn">Продолжить</string>
    <string name="text_gender_man">Муж</string>
    <string name="text_gender_woman">Жен</string>
    <string name="day_2digit">ДД</string>
    <string name="month_2digit">ММ</string>
    <string name="year_4digit">ГГГГ</string>
    <string name="profile_complete">готовый профиль</string>
    <string name="trader_reg_1_text3">После завершения верификации профиля будет предоставлена возможность:</string>
    <string name="trader_reg_1_text4">формировать сообщество последователей для монетизации</string>
    <string name="trader_reg_1_text5">в один клик загружать сделки из своего торгового терминала</string>
    <string name="trader_reg_1_text6">"вести статистику и аналитику своих сделок"</string>
    <string name="trader_reg_1_text7">писать комментарии к своим сделкам</string>
    <string name="trader_reg_1_text8">размещать новости и/или оставлять комментарии к новостям</string>
    <string name="trader_reg_patch_dialog_title">Данные записаны!</string>
    <string name="cb_filter_profit_label">По доходности (% годовых)</string>
    <string name="cb_filter_followers_label">С наибольшим числом последователей</string>
    <string name="btn_filter_apply">Применить</string>
    <string name="on_board_title">Добро пожаловать в Fabulus Trade!</string>
    <string name="on_board_text1">Сегодня великие инвестиционные стратегии создают выдающиеся трейдеры, а не банки, инвестдома или управляющие компании</string>
    <string name="on_board_text2">Мы создали место для глобального позиционирования таких профессионалов на основе их реальных заслуг, а не картинок успеха!</string>
    <string name="binding_error">Ошибка инициализации биндинга</string>
    <string name="coming_soon">В разработке</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit_profile">Заполнить\n профиль</string>
    <string name="great_treader">Великий Трейдер</string>
    <string name="great_treader_fullname">Иванов Александр</string>
    <string name="great_treader_email">Bistro2020@mail.ru</string>
    <string name="great_treader_phone">+79169887788</string>
    <string name="edit_profile_button">редактировать</string>
    <string name="name">Наименование</string>
    <string name="new_publication">Новая публикация</string>
    <string name="load_file">загрузить файл</string>
    <string name="do_publication">Опубликовать</string>
    <string name="gallery_mask">image/*</string>
    <string name="gallery">Галлерея</string>
    <string name="publication_header_text">Расскажите о себе и своей успешной стратегии</string>
    <string name="create_post_hint">"Поделитесь своими мыслями. Используйте \$ для инструментов или # для новости"</string>
    <string name="images_added">Добавлено изображений: %1$d</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="trader_reg_title1">Выберите тарифный план для своих последователей</string>
    <string name="text_free_plan">Бесплатный</string>
    <string name="text_pay_plan">Платный 1300 руб/мес</string>
    <string name="detail">Подробнее…</string>
    <string name="trader_reg_4_text1">За исключением аккаунтов (через запятую, начиная с @_____)</string>
    <string name="text_individual_plan">Индивидуальный</string>
    <string name="trader_reg_4_text2">Напишите стоимость в месяц, например 2000 руб</string>
    <string name="text_invisible_plan">Сделать профиль невидимым</string>
    <string name="trader_reg_4_text3">Пользователи, которые не являются Вашими наблюдателями и подписчиками, не будут Вас видеть</string>
    <string name="specify_trade_terminal">Укажите Ваш торговый терминал</string>
    <string name="your_profile_reg_tr_four">Ваш профиль</string>
    <string name="text_your_address">Ваш адрес</string>
    <string name="text_address">Адрес</string>
    <string name="text_street">Улица</string>
    <string name="text_home">№</string>
    <string name="text_city">Город</string>
    <string name="text_country">Страна проживания</string>
    <string name="text_country_live">Это страна моего гражданства</string>
    <string name="text_passport_number">Номер паспорта</string>
    <string name="remark_about_passport">Этот номер должен относится к стране вашего гражданства</string>
    <string name="russia">Россия</string>
    <string name="fill_profile">Заполнить\nпрофиль трейдера</string>
    <string name="your_profile_reg_tr_second">Ваш профиль</string>
    <string name="trader_reg_2_text1">"     Эта информация должна совпадать с данными вашего удостоверения личности или паспорта"</string>
    <string name="text_name">Имя</string>
    <string name="first_name">Имя</string>
    <string name="name_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWабвгдеёжзийклмнопрстуфхцчшщьыъэюяАБВГДЕЁЖЗИЙКЛМПОНРСТУФХЦЧШЩЬЫЪЭЮЯ</string>
    <string name="middle_name">Отчество</string>
    <string name="second_name">Фамилия</string>
    <string name="text_gender">Пол</string>
    <string name="text_birthday">Дата рождения</string>
    <string name="birthday_hint_string">ДД.ММ.ГГГГ</string>
    <string name="error">Ошибка</string>
    <string name="enter_date_in_field">Введите дату в поле ввода.</string>
    <string name="text_date_format">[00]{.}[00]{.}[9900]</string>
    <string name="require_field">Обязательно поле</string>
    <string name="error_empty_require_field">Заполните все обязательные поля</string>
    <string name="your_profile_reg_tr_third">Ваш профиль</string>
    <string name="choice_trade_terminal">Выберите Ваш торговый терминал</string>
    <string name="ready">Готово</string>
    <string name="trader_reg_patch_dialog_message">Трейдер успешно зарегистрирован. Вам на почту отправлено ПО и инструкция по его установке.</string>
    <string name="ok">OK</string>
    <string name="broker_dialog_text">Работа с брокером %s будет доступна позже</string>
    <string name="trader_reg_error_dialog_message">При загрузке данных на сервер произошла ошибка:\n%s\n Повторите процедуру регистрации</string>
    <string name="trader_reg_3_fromFollowerToTrader">После нажатия на кнопку “Готово” Ваш аккаунт последователя поменяется на аккаунт трейдера. К Вам на электронную почту, указанную при регистрации, поступит письмо, содержащее ссылку на переход в Ваш личный кабинет на сайте fabulustrade.com\n\nВ личном кабинете на сайте Вам необходимо скачать программное обеспечение (скрипт) и ознакомиться с инструкцией по его установке для трансляции сделок на платформу Fabulus Trade.</string>
    <string name="trader_reg_3_becomeToTrader">После нажатия на кнопку “Готово” к Вам на электронную почту, указанную при регистрации, поступит письмо для подтверждения Ваших учетных данных, а также содержащее ссылку на переход в Ваш личный кабинет на сайте fabulustrade.com\n\nВ личном кабинете Вам необходимо скачать программное обеспечение (скрипт) и ознакомиться с инструкцией по его установке для трансляции сделок на платформу Fabulus Trade.</string>
    <string name="email">введите e-mail</string>
    <string name="send">Отправить</string>
    <string name="enter_button_title">Войти</string>
    <string name="registration_button_title_first">Зарегистрироваться</string>
    <string name="trader_pop_instr_not_auth_text">ЧАСТО ТОРГУЕМЫЕ БУМАГИ - доля сделок с прибылью и средний размер прибыли и убытка для 3 наиболее популярных бумаг (по количеству проведенных сделок)</string>
    <string name="trader_pop_instr_not_auth_text_2">Для просмотра необходимо</string>
    <string name="or">или</string>
    <string name="traders_text_view_1_title">С наибольшим числом\n последователей (за последний год)</string>
    <string name="traders_text_view_2_title">Стань популярным трейдером!\n Больше последователей - больше прибыль!</string>
    <string name="show_all">Показать всех</string>
    <string name="filter">Фильтр</string>
    <string name="on_board_title_onBoardVP">Добро пожаловать в Fabulus Trade!</string>
    <string name="on_board_text1_onBoardVP">Сегодня великие инвестиционные стратегии создают выдающиеся трейдеры, а не банки, инвестдома или управляющие компании</string>
    <string name="on_board_text2_onBoardVP">Мы создали место для глобального позиционирования таких профессионалов на основе их реальных заслуг, а не картинок успеха!</string>
    <string name="btn_next_title">Продолжить</string>
    <string name="copy_comment_text">Скопировать текст</string>
    <string name="complain_on_comment_text">Пожаловаться</string>
    <string name="unethical_content">Неэтичный контент</string>
    <string name="mat_insults_provocation">Мат / Оскорбления / Провокация</string>
    <string name="threats_harassment">Угрозы / Преследование</string>
    <string name="market_manipulation">Манипулирование рынком</string>
    <string name="advertising">Реклама</string>
    <string name="flood_spam">Флуд / Спам</string>
    <string name="begging_extortion">Попрошайничество / Вымогательство</string>
    <string name="general_news_feed_menu_title">Новостная лента</string>
    <string name="support_menu_title">Поддержка</string>
</resources>