<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/traders_menu_id"
            android:checked="false"
            android:icon="@drawable/grade"
            android:title="@string/traders_title_menu_title" />
        <item
            android:id="@+id/general_news_feed_id"
            android:checked="false"
            android:icon="@drawable/ic_flash_drawer"
            android:title="@string/general_news_feed_menu_title" />
        <item
            android:id="@+id/divider_1"
            android:title=""
            android:icon="@android:color/transparent" />
        <item
            android:id="@+id/observation_list_menu_id"
            android:icon="@drawable/visibility"
            android:title="@string/my_profile_title" />
        <item
            android:id="@+id/divider_2"
            android:title=""
            android:icon="@android:color/transparent" />
        <item
            android:id="@+id/invite_a_friend_menu_id"
            android:icon="@drawable/person_add"
            android:title="@string/invite_a_friend_menu_title"
            android:visible="false" />
        <item
            android:id="@+id/about_menu_id"
            android:icon="@drawable/ft"
            android:title="@string/about_service_menu_title"/>
        <item
            android:id="@+id/ask_menu_id"
            android:icon="@drawable/live_help"
            android:title="@string/faq_menu_title" />
        <item
            android:id="@+id/support_menu_id"
            android:icon="@drawable/telegram"
            android:title="@string/support_menu_title" />
        <item
            android:id="@+id/community_menu_id"
            android:icon="@drawable/ic_community"
            android:title="@string/community"
            android:visible="false" />
        <item
            android:id="@+id/divider_3"
            android:title=""
            android:icon="@android:color/transparent" />
        <item
            android:id="@+id/exit_menu_id"
            android:icon="@drawable/close"
            android:title="@string/exit_menu_title" />
    </group>
</menu>