<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.trader.registration.TraderRegistrationFragmentSecond">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_card_trader_reg_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/up_card_trader_reg_height"
        android:elevation="@dimen/cardview_add_elevation"
        app:layout_constraintBottom_toTopOf="@id/tv_trader_reg_2_text1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_close_reg_fragment_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/design_default_color_background"
            android:contentDescription="@string/continue_btn"
            android:src="@drawable/close"
            app:tint="@color/colorGray" />

        <TextView
            style="@style/RegTraderTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center"
            android:layout_marginStart="16dp"
            android:text="@string/your_profile" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_trader_reg_2_text1"
        style="@style/RegTraderMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_trader_reg"
        android:layout_marginTop="20dp"
        android:text="@string/trader_reg_2_text1"
        app:layout_constraintTop_toBottomOf="@id/top_card_trader_reg_2" />

    <TextView
        android:id="@+id/tv_trader_reg_2_user_name"
        style="@style/RegTraderLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:layout_marginTop="4dp"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_text1" />

    <EditText
        android:id="@+id/et_trader_reg_2_user_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/et_trader_reg_2_user_middle_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_user_name" />

    <EditText
        android:id="@+id/et_trader_reg_2_user_middle_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="@dimen/default_margin_trader_reg"
        android:hint="@string/middle_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_trader_reg_2_user_first_name"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_user_name" />

    <EditText
        android:id="@+id/et_trader_reg_2_user_second_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/default_margin_trader_reg"
        android:hint="@string/middle_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_trader_reg_2_user_first_name" />

    <TextView
        android:id="@+id/tv_trader_reg_2_user_gender"
        style="@style/RegTraderLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:layout_marginTop="16dp"
        android:text="@string/text_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_trader_reg_2_user_second_name" />

    <Button
        android:id="@+id/btn_gender_man_trader_reg_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:backgroundTint="@color/design_default_color_background"
        android:text="@string/text_gender_man"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/btn_gender_woman_trader_reg_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_user_gender" />

    <Button
        android:id="@+id/btn_gender_woman_trader_reg_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="@dimen/default_margin_trader_reg"
        android:backgroundTint="@color/design_default_color_background"
        android:text="@string/text_gender_woman"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_gender_man_trader_reg_2"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_user_gender" />

    <TextView
        android:id="@+id/tv_trader_reg_2_birthday"
        style="@style/RegTraderLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:layout_marginTop="16dp"
        android:text="@string/text_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gender_man_trader_reg_2" />

    <EditText
        android:id="@+id/et_trader_reg_2_birthday_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_trader_reg"
        android:hint="@string/day_2digit"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toStartOf="@id/et_trader_reg_2_user_birthday_month"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_birthday" />

    <EditText
        android:id="@+id/et_trader_reg_2_user_birthday_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/month_2digit"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toStartOf="@id/et_trader_reg_2_user_birthday_year"
        app:layout_constraintStart_toEndOf="@id/et_trader_reg_2_birthday_day"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_birthday" />

    <EditText
        android:id="@+id/et_trader_reg_2_user_birthday_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_trader_reg"
        android:hint="@string/year_4digit"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_trader_reg_2_user_birthday_month"
        app:layout_constraintTop_toBottomOf="@id/tv_trader_reg_2_birthday" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card_trader_reg_2"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btn_back_trader_reg_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_back_24" />

        <ImageButton
            android:id="@+id/btn_forward_trader_reg_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_forward_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_trader_reg_2_percent_complete"
                style="@style/RegTraderMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textStyle="bold"
                tools:text="20%" />

            <TextView
                style="@style/RegTraderMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_complete" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>